# getas

./: .gitignore  CONTRIBUTING.md  LICENSE  PKGBUILD  README.md  README_en.md  README_ru.md  build.sh  getas-beta.py  getas.py  getas_1.0.deb  pyproject.toml
.github/workflows/: python-package.yml
getas/: main.py
old/: getas-v.1.0.2.py
