[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "getas-tool"
version = "1.0.0"
description = "Инструмент для получения информации об AS и маршрутах через WHOIS"
readme = "README.md"
authors = [{name = "Mikhail Barinov", email = "dev@mbarinov.ru"}]
dependencies = [] 
requires-python = ">=3.7"

[project.scripts]
getas = "getas.main:main"
