[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "getas"
version = "1.1.1"
description = "A tool for obtaining information about ASes and routes via WHOIS / Инструмент для получения информации об AS и маршрутах через WHOIS"
readme = "README.md"
authors = [{name = "Mikhail Barinov", email = "dev@mbarinov.ru"}]
dependencies = [] 
requires-python = ">=3.7"

[project.scripts]
getas = "getas.main:main"

[tool.setuptools.packages.find]
include = ["getas*"] 
exclude = ["assets*"] 
